fixed vertical align of setting description text.

--- a/assets/css/ph-child-admin.css
+++ b/assets/css/ph-child-admin.css
@@ -1,6 +1,7 @@
 #ph_multisite_network_button_remove span.description,
 #ph_multisite_network_button span.description {
     margin-left: 20px;
+    line-height: 1.8rem !important;
 }
 span#ph_network_add_sites_status,
 span#ph_network_remove_sites_status {
